--- a/clients/src/main/resources/common/message/ShareAcknowledgeResponse.json
+++ b/clients/src/main/resources/common/message/ShareAcknowledgeResponse.json
@@ -34,7 +34,7 @@
           "about": "The partition index." },
         { "name": "ErrorCode", "type": "int16", "versions": "0+",
           "about": "The error code, or 0 if there was no error." },
-        { "name": "CurrentLeader", "type": "LeaderIdAndEpoch", "versions": "0+", "taggedVersions": "0+", "tag": 0, "fields": [
+        { "name": "CurrentLeader", "type": "LeaderIdAndEpoch", "versions": "0+", "fields": [
           { "name": "LeaderId", "type": "int32", "versions": "0+",
             "about": "The ID of the current leader or -1 if the leader is unknown." },
           { "name": "LeaderEpoch", "type": "int32", "versions": "0+",
@@ -42,7 +42,7 @@
         ]}
       ]}
     ]},
-    { "name": "NodeEndpoints", "type": "[]NodeEndpoint", "versions": "0+", "taggedVersions": "0+", "tag": 0,
+    { "name": "NodeEndpoints", "type": "[]NodeEndpoint", "versions": "0+",
       "about": "Endpoints for all current leaders enumerated in PartitionData with error NOT_LEADER_OR_FOLLOWER.", "fields": [
       { "name": "NodeId", "type": "int32", "versions": "0+", "mapKey": true, "entityType": "brokerId",
         "about": "The ID of the associated node." },
