--- a/clients/src/main/resources/common/message/ShareAcknowledgeRequest.json
+++ b/clients/src/main/resources/common/message/ShareAcknowledgeRequest.json
@@ -25,6 +25,8 @@
   // explicitly enabled.
   "latestVersionUnstable": true,
   "fields": [
+    { "name": "GroupId", "type": "string", "versions": "0+", "nullableVersions": "0+", "default": "null", "entityType": "groupId",
+      "about": "null if not provided or if it didn't change since the last fetch; the group identifier otherwise." },
     { "name": "MemberId", "type": "string", "versions": "0+", "nullableVersions": "0+",
       "about": "The member ID." },
     { "name": "ShareSessionEpoch", "type": "int32", "versions": "0+",
