--- a/clients/src/main/resources/common/message/ShareAcknowledgeRequest.json
+++ b/clients/src/main/resources/common/message/ShareAcknowledgeRequest.json
@@ -45,6 +45,8 @@
             "about": "Base offset of batch of records to acknowledge."},
           { "name": "LastOffset", "type": "int64", "versions": "0+",
             "about": "Last offset (inclusive) of batch of records to acknowledge."},
+          { "name": "AcknowledgeTypes", "type": "[]int8", "versions": "0+",
+            "about": "Array of acknowledge types - 0:Gap,1:Accept,2:Release,3:Reject."},
           { "name": "GapOffsets", "type": "[]int64", "versions": "0+",
             "about": "Array of offsets in this range which do not correspond to records."},
           { "name": "AcknowledgeType", "type": "int8", "versions": "0+", "default": "0",
