--- a/clients/src/main/resources/common/message/ShareAcknowledgeResponse.json
+++ b/clients/src/main/resources/common/message/ShareAcknowledgeResponse.json
@@ -19,6 +19,18 @@
   "name": "ShareAcknowledgeResponse",
   "validVersions": "0",
   "flexibleVersions": "0+",
+  // Supported errors:
+  // - GROUP_AUTHORIZATION_FAILED (version 0+)
+  // - TOPIC_AUTHORIZATION_FAILED (version 0+)
+  // - UNKNOWN_TOPIC_OR_PARTITION (version 0+)
+  // - SHARE_SESSION_NOT_FOUND (version 0+)
+  // - INVALID_SHARE_SESSION_EPOCH (version 0+)
+  // - NOT_LEADER_OR_FOLLOWER (version 0+)
+  // - UNKNOWN_TOPIC_ID (version 0+)
+  // - INVALID_RECORD_STATE (version 0+)
+  // - KAFKA_STORAGE_ERROR (version 0+)
+  // - INVALID_REQUEST (version 0+)
+  // - UNKNOWN_SERVER_ERROR (version 0+)
   "fields": [
     { "name": "ThrottleTimeMs", "type": "int32", "versions": "0+", "ignorable": true,
       "about": "The duration in milliseconds for which the request was throttled due to a quota violation, or zero if the request did not violate any quota." },
@@ -34,6 +46,8 @@
           "about": "The partition index." },
         { "name": "ErrorCode", "type": "int16", "versions": "0+",
           "about": "The error code, or 0 if there was no error." },
+        { "name": "ErrorMessage", "type": "string", "versions": "0+", "nullableVersions": "0+", "default": "null",
+          "about": "The error message, or null if there was no error." },
         { "name": "CurrentLeader", "type": "LeaderIdAndEpoch", "versions": "0+", "fields": [
           { "name": "LeaderId", "type": "int32", "versions": "0+",
             "about": "The ID of the current leader or -1 if the leader is unknown." },
