--- a/clients/src/main/resources/common/message/ShareAcknowledgeRequest.json
+++ b/clients/src/main/resources/common/message/ShareAcknowledgeRequest.json
@@ -41,8 +41,8 @@
           "about": "The partition index." },
         { "name": "AcknowledgementBatches", "type": "[]AcknowledgementBatch", "versions": "0+",
           "about": "Record batches to acknowledge.", "fields": [
-          { "name": "BaseOffset", "type": "int64", "versions": "0+",
-            "about": "Base offset of batch of records to acknowledge."},
+          { "name": "FirstOffset", "type": "int64", "versions": "0+",
+            "about": "First offset of batch of records to acknowledge."},
           { "name": "LastOffset", "type": "int64", "versions": "0+",
             "about": "Last offset (inclusive) of batch of records to acknowledge."},
           { "name": "AcknowledgeTypes", "type": "[]int8", "versions": "0+",
