--- a/service.yml
+++ b/service.yml
@@ -2,6 +2,16 @@ name: kafka
 semaphore:
   enable: true
   pipeline_enable: false
+  branches:
+    - master
+    - main
+    - /^v\d+\.\d+\.x$/
+    - /^gh-readonly-queue.*/
+    - /^v0\.\d+\.x-\d+\.\d+\.\d+-\d+-ce(-[a-zA-Z0-9-]+)?$/
+  tasks:
+    - name: hotfix_branch_override_trigger
+      branch: master
+      pipeline_file: .semaphore/semaphore.yml
 git:
   enable: true
 lang: java
