--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -33,6 +33,10 @@ global_job_config:
 blocks:
   - name: Run tests
     task:
+      prologue:
+        commands:
+          # - if [ "$ENABLE_THREAD_LEAK_LISTENER" = "true" ]; then make enable-thread-leak-listener; fi
+          - make init-ci
       jobs:
         - name: Check, Compile and Test
           commands:
