--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -100,20 +100,20 @@ blocks:
       jobs:
         - name: Build, Compile, Validations, Publish, Upgrade
           commands:
-            - >-
-              if [ "$NANO_VERSION" = "true" ] && [ "$RELEASE_JOB" = "false" ] && [ "$ENABLE_PUBLISH_ARTIFACTS" = "true" ]; then
-                . ci-tools ci-update-version
-              fi
-            - make compile-validate
-            - make check-scala-compatibility
+            # - >-
+            #   if [ "$NANO_VERSION" = "true" ] && [ "$RELEASE_JOB" = "false" ] && [ "$ENABLE_PUBLISH_ARTIFACTS" = "true" ]; then
+            #     . ci-tools ci-update-version
+            #   fi
+            # - make compile-validate
+            # - make check-scala-compatibility
             - make publish-maven-artifacts
-            - |
-              echo "PUBLISH: $PUBLISH, RELEASE_JOB: $RELEASE_JOB, SEMAPHORE_GIT_REF_TYPE: $SEMAPHORE_GIT_REF_TYPE, ENABLE_DOWNSTREAM_TRIGGER: $ENABLE_DOWNSTREAM_TRIGGER"
-              if [ "$PUBLISH" = "true" ] && [ "$RELEASE_JOB" = "false" ] && [ "$SEMAPHORE_GIT_REF_TYPE" != "pull-request" ] && [ "$ENABLE_DOWNSTREAM_TRIGGER" = "true" ]; then
-                for project in $DOWNSTREAM_PROJECTS; do
-                  sem-trigger -p $project -b $DOWNSTREAM_BRANCH_NAME -f .semaphore/semaphore.yml
-                done
-              fi
+            # - |
+            #   echo "PUBLISH: $PUBLISH, RELEASE_JOB: $RELEASE_JOB, SEMAPHORE_GIT_REF_TYPE: $SEMAPHORE_GIT_REF_TYPE, ENABLE_DOWNSTREAM_TRIGGER: $ENABLE_DOWNSTREAM_TRIGGER"
+            #   if [ "$PUBLISH" = "true" ] && [ "$RELEASE_JOB" = "false" ] && [ "$SEMAPHORE_GIT_REF_TYPE" != "pull-request" ] && [ "$ENABLE_DOWNSTREAM_TRIGGER" = "true" ]; then
+            #     for project in $DOWNSTREAM_PROJECTS; do
+            #       sem-trigger -p $project -b $DOWNSTREAM_BRANCH_NAME -f .semaphore/semaphore.yml
+            #     done
+            #   fi
 after_pipeline:
   task:
     agent:
