--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -106,7 +106,17 @@ blocks:
             #   fi
             # - make compile-validate
             # - make check-scala-compatibility
-            - make publish-maven-artifacts
+            - mavenUrl=$(vault kv get v1/ci/kv/gradle/artifactory_snapshots_settings | grep mavenUrl | cut -d "," -f 2 | cut -d "'" -f 2);
+            - echo "$mavenUrl"
+            # - if [ "$PUBLISH" = "true" ] && [ "$SEMAPHORE_GIT_REF_TYPE" != "pull-request" ] && [ "$ENABLE_PUBLISH_ARTIFACTS" = "true" ]; then \
+            # -   if [[ "$RELEASE_JOB" = "false" ]]; then \
+            # -     . ci-tools ci-push-tag; \
+            # -     mavenUrl=$(vault kv get v1/ci/kv/gradle/artifactory_snapshots_settings | grep mavenUrl | cut -d "," -f 2 | cut -d "'" -f 2); \
+            # -   elif [[ "$SEMAPHORE_GIT_BRANCH" == *-alpha* ]]; then \
+            # -     mavenUrl=$(vault kv get v1/ci/kv/gradle/artifactory_preview_release_settings | grep mavenUrl | cut -d "," -f 2 | cut -d "'" -f 2); \
+            # -   fi; \
+            # -   ./gradlewAll -PmavenUrl=$mavenUrl -PkeepAliveMode=session uploadArchives; \
+            # - fi
             # - |
             #   echo "PUBLISH: $PUBLISH, RELEASE_JOB: $RELEASE_JOB, SEMAPHORE_GIT_REF_TYPE: $SEMAPHORE_GIT_REF_TYPE, ENABLE_DOWNSTREAM_TRIGGER: $ENABLE_DOWNSTREAM_TRIGGER"
             #   if [ "$PUBLISH" = "true" ] && [ "$RELEASE_JOB" = "false" ] && [ "$SEMAPHORE_GIT_REF_TYPE" != "pull-request" ] && [ "$ENABLE_DOWNSTREAM_TRIGGER" = "true" ]; then
