--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -53,31 +53,6 @@ global_job_config:
       - source scripts/set_env_vars.sh
       - source scripts/set_downstream_branch.sh
 blocks:
-  - name: Tests
-    dependencies: []
-    task:
-      prologue:
-        commands:
-          - make init-ci
-      jobs:
-        - name: Unit tests and Integration tests
-          commands:
-            - './gradlew 
-                unitTest integrationTest --no-daemon --stacktrace --continue 
-                -PtestLoggingEvents=started,passed,skipped,failed -PmaxParallelForks=4 
-                -PignoreFailures=true -PmaxTestRetries=1 -PmaxTestRetryFailures=5'
-          execution_time_limit:
-            minutes: 120
-      epilogue:
-        always:
-          commands:
-            - shopt -s globstar && test-results publish --name Test-Suite --trim-output-to 1024 --omit-output-for-passed **/build/test-results/**/TEST-*.xml
-            - |
-              echo "Job creation time: $((SEMAPHORE_JOB_CREATION_TIME * 1000))"
-              echo "Current time: $(date +%s%3N)"
-              echo $(( ($(date +%s%3N) - $SEMAPHORE_JOB_CREATION_TIME * 1000) )) > duration.txt
-              artifact push workflow duration.txt --destination $SEMAPHORE_JOB_INDEX-test-duration-$SEMAPHORE_WORKFLOW_ID || true
-
   - name: Gradle Build
     dependencies: []
     task:
@@ -85,7 +60,7 @@ blocks:
         commands:
           - make init-ci
       jobs:
-        - name: Build, Compile, Validations, Publish, Upgrade
+        - name: Build, Compile, Validations, Publish
           commands:
             - >-
               if [ "$NANO_VERSION" = "true" ] && [ "$RELEASE_JOB" = "false" ] && [ "$ENABLE_PUBLISH_ARTIFACTS" = "true" ]; then
@@ -110,6 +85,30 @@ blocks:
                   sem-trigger -p $project -b $DOWNSTREAM_BRANCH_NAME -f .semaphore/semaphore.yml
                 done
               fi
+  - name: Tests
+    dependencies: []
+    task:
+      prologue:
+        commands:
+          - make init-ci
+      jobs:
+        - name: Unit tests and Integration tests
+          commands:
+            - './gradlew 
+                unitTest integrationTest --no-daemon --stacktrace --continue 
+                -PtestLoggingEvents=started,passed,skipped,failed -PmaxParallelForks=4 
+                -PignoreFailures=true -PmaxTestRetries=1 -PmaxTestRetryFailures=5'
+          execution_time_limit:
+            minutes: 120
+      epilogue:
+        always:
+          commands:
+            - shopt -s globstar && test-results publish --name Test-Suite --trim-output-to 1024 --omit-output-for-passed **/build/test-results/**/TEST-*.xml
+            - |
+              echo "Job creation time: $((SEMAPHORE_JOB_CREATION_TIME * 1000))"
+              echo "Current time: $(date +%s%3N)"
+              echo $(( ($(date +%s%3N) - $SEMAPHORE_JOB_CREATION_TIME * 1000) )) > duration.txt
+              artifact push workflow duration.txt --destination $SEMAPHORE_JOB_INDEX-test-duration-$SEMAPHORE_WORKFLOW_ID || true
 after_pipeline:
   task:
     agent:
