--- a/service.yml
+++ b/service.yml
@@ -27,5 +27,7 @@ code_artifact:
   package_paths:
     - maven-snapshots/maven/org.apache.kafka/kafka*
     - maven-snapshots/maven/org.apache.kafka/connect*
+    - maven-snapshots/maven/org.apache.kafka/trogdor*
     - maven-releases-preview/maven/org.apache.kafka/kafka*
     - maven-releases-preview/maven/org.apache.kafka/connect*
+    - maven-releases-preview/maven/org.apache.kafka/trogdor*
