--- a/service.yml
+++ b/service.yml
@@ -25,9 +25,5 @@ github:
 code_artifact:
   enable: true
   package_paths:
-    - maven-snapshots/maven/org.apache.kafka/kafka*
-    - maven-snapshots/maven/org.apache.kafka/connect*
-    - maven-snapshots/maven/org.apache.kafka/trogdor*
-    - maven-releases-preview/maven/org.apache.kafka/kafka*
-    - maven-releases-preview/maven/org.apache.kafka/connect*
-    - maven-releases-preview/maven/org.apache.kafka/trogdor*
+    - maven-snapshots/maven/org.apache.kafka/*
+    - maven-releases-preview/maven/org.apache.kafka/*
